<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, mainActivity!</string>
    <string name="app_name">4dnest</string>
    <string name="create_screen_read_tag">&lt;&lt;Read</string>
    <string name="create_screen_create_tag">Create</string>
    <string name="create_screen_stored_eggs_tag">Stored Eggs&gt;&gt;</string>
    <string name="create_screen_open_gallery_tag">Pick from Media Library</string>
    <string name="create_screen_track_route_tag">Track Route</string>
    <string name="stored_eggs_screen_unsent_title">Unsent Eggs:</string>
    <string name="stored_eggs_screen_sent_title">Sent Eggs:</string>
    <string name="stream_reader_title">Latest messages:</string>
    <string name="stream_reader_stream_tag">Read</string>
    <string name="stream_reader_create_tag">Create&gt;&gt;</string>
    <string name="stream_reader_gps_button_tracking">Tracking</string>
    <string name="stream_reader_gps_button_nottracking">Start track</string>
    <string name="stored_eggs_screen_create_tag">&lt;&lt;Create</string>
    <string name="stored_eggs_screen_stored_eggs_tag">Stored Eggs</string>
    <string name="send_egg_to_nest">Send now</string>
    <string name="preview">preview</string>
    <string name="add_message_here">Add Message here</string>
    <string name="add_tag_here">Write tag here</string>
    <string name="read_stream_create_button">Create</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Preferences</string>
    <string name="menu_discard">Discard</string>
    <string name="menu_drafts">Drafts</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_nests">Edit Nests</string>
    <string name="welcome_title">Welcome to 4DNest!</string>
    <string name="setup_qr">Read in QR-code</string>
    <string name="setup_manual">Fill in by Hand</string>
    <string name="sendqueue_egg_queued">Sending..</string>
    <string name="sendqueue_egg_send_complete">Send completed</string>
    <string name="gps_notification_on">GPS tracking started</string>
    <string name="gps_notification_off">GPS tracking disabled</string>
    <string name="gps_statusbar_title">4DNest</string>
    <string name="gps_tracking_initialized">Waiting for GPS lock</string>
    <string name="gps_statusbar_tracking_active">Route tracking active</string>
    <string name="gps_error_outofservice">GPS out of service, please enable to track</string>
    <string name="gps_error_temporarilydisabled">GPS temporarily disabled</string>
    <string name="gps_available">GPS available</string>
    <string name="gps_file_save_success">Route saved to file</string>
    <string name="gps_file_save_failure">Route saving failed</string>
    <string name="gps_egg_create_fail">Error creating draft route</string>
    <string name="gps_empty_route_not_saved">No locations received, route not saved</string>
    <string name="gps_error_file_open">Error opening track output file. Exiting.</string>
    <string name="sendqueue_statusbar_title">Sending item</string>
    <string name="sendqueue_statusbar_descr">Item upload in progress</string>
    <string name="add_tag_button">Add tag</string>
    <string name="new_egg_intent_select_picture">Select Picture</string>
    <string name="new_egg_intent_image_description">Image captured for 4D Nest</string>
    <string name="new_egg_intent_image_file_name">dpic.jpg</string>
    <string name="new_egg_save_as_draft">Save as draft</string>
    <string name="new_egg_dialogue_open_image_callery">Open Picture Gallery</string>
    <string name="new_egg_dialogue_open_photo_camera">Open Camera</string>
    <string name="new_egg_dialogue_open_video_camera">Open Camera</string>
    <string name="new_egg_dialogue_open_video_callery">Open Video Gallery</string>
    <string name="new_egg_dialogue_back">Do you want to save the message as a draft?</string>
	<string name="new_egg_dialogue_back_save">Save</string>
	<string name="new_egg_dialogue_back_cancel">Keep editing</string>
	<string name="new_egg_dialogue_back_discard">Discard</string>
    <string name="prefs_category_nest_title">Server settings</string>
    <string name="prefs_nest_uri_title">Base URL</string>
    <string name="prefs_nest_uri_descr">Base URL, e.g. http://server.host.org/</string>
    <string name="prefs_nest_username_descr">User name</string>
    <string name="prefs_nest_username_title">User name</string>
	<string name="prefs_nest_password_title">Password</string>
	<string name="prefs_nest_password_descr">Password</string>
	<string name="prefs_nest_accept_all_certs_title">Accept all SSL certs</string>
	<string name="prefs_nest_accept_all_certs_descr">Accept all SSL certificates even if they have been self-signed</string>
	<string name="prefs_nest_accept_all_certs_offdescr">Only signed certificates are allowed</string>
	<string name="prefs_nest_accept_all_certs_ondescr">All certificates are allowed</string>
	<string name="pref_kiosk_title">Kiosk Mode</string>
	<string name="pref_kiosk_descr_on">Kiosk mode on</string>
	<string name="pref_kiosk_descr_off">Kiosk mode off</string>
	
	<string name="prefs_category_stream_title">Stream settings</string>
	<string name="prefs_category_gps_title">Route tracing settings</string>
	<string name="prefs_gps_update_freq_title">Update frequency</string>
	<string name="prefs_gps_update_freq_descr">How often location info is requested</string>
	<string name="prefs_gps_update_min_distance_title">Minimum distance</string>
	<string name="prefs_gps_update_min_distance_descr">Minimum distance from previous point to save location</string>
	<string name="prefs_newegg_fetch_loc_title">Saving post location</string>
	<string name="prefs_newegg_fetch_loc_descrOn">Save post location even if route tracking is off.</string>
	<string name="prefs_newegg_fetch_loc_descrOff">Do not save post location if route tracking is off.</string>
	<string name="change_nest_prompt">Change</string>
	<string name="send_all_drafts_button_text">Send All Drafts</string>
	<string name="default_no_date">No Date</string>
	<string name="default_no_message">No Message</string>
	<string name="default_no_tags">No Tags</string>
    <string name="menu_refresh">Refresh</string>
    <string name="stream_list_refreshing_toast">Refreshing stream..</string>
    <string name="stream_list_refreshed_toast">Stream Refreshed</string>
    <string name="protocolerror_authfail">Sending failed, unauthorized</string>
    <string name="protocolerror_sendfail">Sending failed</string>
    <string name="protocolerror_servererror">Sending failed, server error. Contact server owner.</string>
    <string name="protocolerror_unknown">Unknown error</string>
    <string name="stream_update_frequency_title">Stream Update</string>
    <string name="stream_update_frequency_descr">How often the Stream is fetched from the server in minutes</string>
    <string name="stream_size_title">Stream size</string>
    <string name="stream_size_descr">How many objects are fetched from the stream</string>
    <string name="egg_view_no_date_dummy">No Date</string>
    <string name="egg_view_no_text">No Text</string>
    <string name="egg_view_no_tags">No Tags</string>
    <string name="new_egg_draft_toast">Saved as draft</string>
    <string name="draft_list_dialogue_delete">Are you sure you want to delete the message?</string>
    <string name="draft_list_dialogue_confirm">Delete</string>
    <string name="draft_list_dialogue_cancel">Cancel</string>
    <string name="no_drafts_text">You have no saved drafts.</string>
    <string name="sendqueue_active_nest_not_set">Active nest not set, item not queued</string>
    <string name="new_egg_select_picture_source">Select Picture Source</string>
    <string name="new_egg_select_audio_source">Select Audio Source</string>
    <string name="new_egg_select_video_source">Select Video Source</string>
    <string name="new_egg_video_description">Video captured for 4D Nest</string>
    <string name="new_egg_getting_location">Getting location..</string>
    <string name="new_egg_location_format">Location: %1$.5f, %2$.5f</string>
    <string name="application_invalid_uri">Base URL of server is invalid</string>
    <string name="to_map_button_name">Show on map</string>
</resources>
