<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <CheckBoxPreference
        android:key="allow_all_certs"
        android:summaryOn="@string/prefs_nest_accept_all_certs_ondescr"
        android:summaryOff="@string/prefs_nest_accept_all_certs_offdescr"
        android:summary="@string/prefs_nest_accept_all_certs_descr"
        android:title="@string/prefs_nest_accept_all_certs_title" >
    </CheckBoxPreference>
    
	<EditTextPreference
		android:key="nest_base_uri"
		android:summary="@string/prefs_nest_uri_descr"
		android:title="@string/prefs_nest_uri_title" >
	</EditTextPreference>

	<EditTextPreference
		android:key="nest_username"
		android:summary="@string/prefs_nest_username_descr"
		android:title="@string/prefs_nest_username_title">
	</EditTextPreference>

	<EditTextPreference
		android:key="nest_password"
		android:summary="@string/prefs_nest_password_descr"
		android:title="@string/prefs_nest_password_title">
	</EditTextPreference>

</PreferenceScreen>