<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title" 
        android:gravity="center_vertical|center_horizontal"/>
    
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setup_qr"
        android:text="@string/setup_qr"/>
    
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setup_manual"
        android:text="@string/setup_manual"/>

</LinearLayout>