<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/create_screen_text_margin"
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:layout_below="@+id/create_screen_navigation_bar"
        android:background="#000000"
        android:orientation="vertical" />

    <RelativeLayout
        android:id="@+id/create_screen_navigation_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/stream_reader_stream_tag"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/stream_reader_create_tag"
            android:textSize="15dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/create_screen_text_margin"
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:layout_below="@+id/create_screen_navigation_bar"
        android:background="#000000"
        android:orientation="vertical" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stream_reader_title" />

    <ListView
        android:id="@+id/egg_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/background" >
    </ListView>

</LinearLayout>