<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <!--
     :nextFocusUp and :nextFocusLeft have been set to the id of this component
     to prevent the dummy from receiving focus again
    -->

    <AutoCompleteTextView
        android:id="@+id/autotext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:nextFocusLeft="@id/autotext"
        android:nextFocusUp="@id/autotext" />

    <ScrollView
        android:id="@+id/new_egg_scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff"
        android:orientation="vertical" >

        <!-- buttom padding needs to be 40dp or buttons at end will over run this view -->

        <LinearLayout
            android:id="@+id/new_egg_inputs_linearlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            android:paddingTop="5dp" >

            <RelativeLayout
                android:id="@+id/new_egg_upper_buttons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_screen_text_margin"
                android:layout_marginTop="5px"
                android:background="#ffffff"
                android:gravity="center_horizontal" >

                <ImageButton
                    android:id="@+id/select_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10px"
                    android:src="@drawable/audio_create" />

                <ImageButton
                    android:id="@+id/select_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10px"
                    android:layout_toRightOf="@+id/select_audio"
                    android:src="@drawable/image_create" />

                <ImageButton
                    android:id="@+id/select_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10px"
                    android:layout_toRightOf="@+id/select_image"
                    android:src="@drawable/video_create" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/new_photo_egg_thumbnail_view"
                android:layout_width="fill_parent"
                android:layout_height="150sp"
                android:cropToPadding="true"
                android:onClick="new_photo_egg_preview_pic"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/new_photo_egg_thumbnail_view2"
                android:layout_width="fill_parent"
                android:layout_height="120sp"
                android:background="#000000"
                android:cropToPadding="true"
                android:onClick="new_photo_egg_preview_pic"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="#ffffff"
                android:text="@string/preview" />

            <EditText
                android:id="@+id/new_photo_egg_caption_view"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:gravity="top"
                android:hint="@string/add_message_here"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp" />
/
    	
            <!--
             <EditText
    	    android:layout_width="fill_parent"
    	    android:layout_height ="60px"
    	    android:layout_above="@+id/new_photo_egg_send_egg_button"
    	    android:hint="tags"/>
            -->

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/nwe_photo_egg_view_bottom_buttons"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/new_photo_egg_save_draft_button"
            android:layout_width="50px"
            android:layout_height="30px"
            android:layout_toLeftOf="@+id/new_photo_egg_send_egg_button"
            android:text="Save as \n Draft" />
/
    	

        <Button
            android:id="@+id/new_photo_egg_send_egg_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/send_egg_to_nest" />
    </RelativeLayout>

</RelativeLayout>